--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -199,8 +199,8 @@ input[type="checkbox"] {
 
 @font-face {
   font-family: "Glyphicons Halflings";
-  src: url("fonts/glyphiconshalflings-regular.eot");
-  src: url("fonts/glyphiconshalflings-regular.eot?#iefix") format("embedded-opentype"), url("fonts/glyphiconshalflings-regular.woff") format("woff"), url("fonts/glyphiconshalflings-regular.ttf") format("truetype"), url("fonts/glyphiconshalflings-regular.svg#glyphicons_halflingsregular") format("svg");
+  src: url("assets/fonts/glyphiconshalflings-regular.eot");
+  src: url("assets/fonts/glyphiconshalflings-regular.eot?#iefix") format("embedded-opentype"), url("assets/fonts/glyphiconshalflings-regular.woff") format("woff"), url("assets/fonts/glyphiconshalflings-regular.ttf") format("truetype"), url("assets/fonts/glyphiconshalflings-regular.svg#glyphicons_halflingsregular") format("svg");
   font-style: normal;
   font-weight: normal; }
 .glyphicon {
@@ -692,41 +692,41 @@ input[type="checkbox"] {
 
 @font-face {
   font-family: "Gotham";
-  src: url("assets/Gotham/Gotham-Book.eot");
-  src: local("Gotham Book"), local("Gotham-Book"), url("assets/Gotham/Gotham-Book.woff") format("woff"), url("assets/Gotham/Gotham-Book.otf") format("opentype"), url("assets/Gotham/Gotham-Book.svg#Gotham-Book") format("svg"); }
+  src: url("Gotham-Book.eot");
+  src: local("Gotham Book"), local("Gotham-Book"), url("Gotham-Book.woff") format("woff"), url("Gotham-Book.otf") format("opentype"), url("Gotham-Book.svg#Gotham-Book") format("svg"); }
 @font-face {
   font-family: "Gotham";
-  src: url("assets/Gotham/Gotham-BookItalic.eot");
-  src: local("Gotham Italic"), local("Gotham-BookItalic"), url("assets/Gotham/Gotham-BookItalic.woff") format("woff"), url("assets/Gotham/Gotham-BookItalic.otf") format("opentype"), url("assets/Gotham/Gotham-BookItalic.svg#Gotham-BookItalic") format("svg");
+  src: url("Gotham-BookItalic.eot");
+  src: local("Gotham Italic"), local("Gotham-BookItalic"), url("Gotham-BookItalic.woff") format("woff"), url("Gotham-BookItalic.otf") format("opentype"), url("Gotham-BookItalic.svg#Gotham-BookItalic") format("svg");
   font-style: italic; }
 @font-face {
   font-family: "Gotham";
-  src: url("assets/Gotham/Gotham-Bold.eot");
-  src: local("Gotham Bold"), local("Gotham-Bold"), url("assets/Gotham/Gotham-Bold.woff") format("woff"), url("assets/Gotham/Gotham-Bold.otf") format("opentype"), url("assets/Gotham/Gotham-Bold.svg#Gotham-Bold") format("svg");
+  src: url("Gotham-Bold.eot");
+  src: local("Gotham Bold"), local("Gotham-Bold"), url("Gotham-Bold.woff") format("woff"), url("Gotham-Bold.otf") format("opentype"), url("Gotham-Bold.svg#Gotham-Bold") format("svg");
   font-weight: bold; }
 @font-face {
   font-family: "Gotham";
-  src: url("assets/Gotham/Gotham-BoldItalic.eot");
-  src: local("Gotham Bold Italic"), local("Gotham-BoldItalic"), url("assets/Gotham/Gotham-BoldItalic.woff") format("woff"), url("assets/Gotham/Gotham-BoldItalic.otf") format("opentype"), url("assets/Gotham/Gotham-BoldItalic.svg#Gotham-BoldItalic") format("svg");
+  src: url("Gotham-BoldItalic.eot");
+  src: local("Gotham Bold Italic"), local("Gotham-BoldItalic"), url("Gotham-BoldItalic.woff") format("woff"), url("Gotham-BoldItalic.otf") format("opentype"), url("Gotham-BoldItalic.svg#Gotham-BoldItalic") format("svg");
   font-weight: bold;
   font-style: italic; }
 @font-face {
   font-family: "GothamLight";
-  src: url("assets/Gotham/Gotham-Light.eot");
-  src: local("Gotham Light"), local("Gotham-Light"), url("assets/Gotham/Gotham-Light.woff") format("woff"), url("assets/Gotham/Gotham-Light.otf") format("opentype"), url("assets/Gotham/Gotham-Light.svg#Gotham-Light") format("svg"); }
+  src: url("Gotham-Light.eot");
+  src: local("Gotham Light"), local("Gotham-Light"), url("Gotham-Light.woff") format("woff"), url("Gotham-Light.otf") format("opentype"), url("Gotham-Light.svg#Gotham-Light") format("svg"); }
 @font-face {
   font-family: "GothamLight";
-  src: url("assets/Gotham/Gotham-LightItalic.eot");
-  src: local("Gotham Light Italic"), local("Gotham-LightItalic"), url("assets/Gotham/Gotham-LightItalic.woff") format("woff"), url("assets/Gotham/Gotham-LightItalic.otf") format("opentype"), url("assets/Gotham/Gotham-LightItalic.svg#Gotham-LightItalic") format("svg");
+  src: url("Gotham-LightItalic.eot");
+  src: local("Gotham Light Italic"), local("Gotham-LightItalic"), url("Gotham-LightItalic.woff") format("woff"), url("Gotham-LightItalic.otf") format("opentype"), url("Gotham-LightItalic.svg#Gotham-LightItalic") format("svg");
   font-style: italic; }
 @font-face {
   font-family: "GothamMedium";
-  src: url("assets/Gotham/Gotham-Medium.eot");
-  src: local("Gotham Medium"), local("Gotham-Medium"), url("assets/Gotham/Gotham-Medium.woff") format("woff"), url("assets/Gotham/Gotham-Medium.otf") format("opentype"), url("assets/Gotham/Gotham-Medium.svg#Gotham-Medium") format("svg"); }
+  src: url("Gotham-Medium.eot");
+  src: local("Gotham Medium"), local("Gotham-Medium"), url("Gotham-Medium.woff") format("woff"), url("Gotham-Medium.otf") format("opentype"), url("Gotham-Medium.svg#Gotham-Medium") format("svg"); }
 @font-face {
   font-family: "GothamMedium";
-  src: url("assets/Gotham/Gotham-MediumItalic.eot");
-  src: local("Gotham Medium Italic"), local("Gotham-MediumItalic"), url("assets/Gotham/Gotham-MediumItalic.woff") format("woff"), url("assets/Gotham/Gotham-MediumItalic.otf") format("opentype"), url("assets/Gotham/Gotham-MediumItalic.svg#Gotham-MediumItalic") format("svg");
+  src: url("Gotham-MediumItalic.eot");
+  src: local("Gotham Medium Italic"), local("Gotham-MediumItalic"), url("Gotham-MediumItalic.woff") format("woff"), url("Gotham-MediumItalic.otf") format("opentype"), url("Gotham-MediumItalic.svg#Gotham-MediumItalic") format("svg");
   font-style: italic; }
 /* #Tables
  * ================================================== */
