--- a/app/views/pages/_courseList.html.erb
+++ b/app/views/pages/_courseList.html.erb
@@ -15,7 +15,7 @@
       <tr>
 
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/1-1.jpg')">
               <div class="triangle"></div>
@@ -31,7 +31,7 @@
           </a>
         </td>
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/1-2.jpg')">
               <div class="triangle"></div>
@@ -47,7 +47,7 @@
           </a>
         </td>
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/1-3.jpg')">
               <div class="triangle"></div>
@@ -67,7 +67,7 @@
       </tr>
     </table>
     <center>
-      <a href="course_syllabus">
+      <a href="pay">
         <div class="cta" style="background: #fff; line-height: 46px; display: inline-block; padding: 0 20px; border-radius: 25px; font-size: 14px; margin-bottom: 20px; margin-top: -20px">
           Take the Full Stack E-Commerce Track for $999
         </div>
@@ -89,7 +89,7 @@
       <tr>
 
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/2-1.jpg')">
               <div class="triangle"></div>
@@ -105,7 +105,7 @@
           </a>
         </td>
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/2-2.png')">
               <div class="triangle"></div>
@@ -121,7 +121,7 @@
           </a>
         </td>
         <td>
-          <a href="course_syllabus">
+          <a href="pay">
           <div class="courseCard">
             <div class="photo" style="background-image: url('assets/coursePics/2-3.jpg')">
               <div class="triangle"></div>
@@ -141,7 +141,7 @@
       </tr>
     </table>
     <center>
-      <a href="course_syllabus">
+      <a href="pay">
         <div class="cta" style="background: #fff; line-height: 46px; display: inline-block; padding: 0 20px; border-radius: 25px; font-size: 14px; margin-bottom: 20px; margin-top: -20px">
           Take the Full Stack Marketing Track for $999
         </div>
