--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -94,8 +94,9 @@ input[type="submit"], input[type="reset"], input[type="button"] {
   font-size: 16px;
   line-height: 24px;
   display: inline-block;
-  padding: 0px;
+  padding: 5px 10px;
   margin: 0px;
+  border-radius: 5px;
   border: 0px;
   cursor: pointer;
   marign: 0px; }
